--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,13 @@
+2002-03-03  Andras Varga
+
+	* tkapp.cc, tkapp.h, tkcmd.cc: adopted to changes in the sim kernel.
+	(See include/ChangeLog)
+
+	* windows.tcl: cosmetics on file viewer dialog.
+
+	* main.tcl, menuproc.tcl: refinements on implementation of the
+	View|Output vector file, Output scalar file, Snapshot file menu items.
+
 2002-02-29  Andras Varga
 
 	* dialogs.tcl: implemented backwards search/replace
@@ -165,13 +175,13 @@
 2000-06-02  Andras Varga
 
 	* ------ omnetpp-2.0b5 released ------
-	
+
 	* minor fix in tkcmd.cc [reported by Richard Lyon]
 
 2000-05-21  Andras Varga
 
 	* ------ omnetpp-2.0b4 released ------
-	
+
 	* bugfix: 'Options|Load inspector list' now works again (you must
 	re-generate your existing inspect.lst files)
 
@@ -236,7 +246,7 @@
 2000-01-17  Andras Varga (17-18)
 
 	* ------ omnetpp-2.0b3 released ------
-	
+
 	* bugfix in OmnetTkApp::objectDeleted() (tkapp.cc)
 
 	* edited error msgs in tkapp.cc
@@ -276,9 +286,9 @@
 1999-09-05  Andras Varga
 
 	* ------ omnetpp-2.0b2 released ------
-	
+
 	* main window renamed from ".omnetpp" to "."; now modal dialogs
-	cannot go behind the main window (including the big red "STOP!" 
+	cannot go behind the main window (including the big red "STOP!"
 	dialog).
 
 1999-08-30  Andras Varga
@@ -334,7 +344,7 @@
 
 	* now demands at least Tcl/Tk 8.0 patchlevel 1
 
-1999-06-21  Andras Varga	
+1999-06-21  Andras Varga
 
 	* all sources checked in under CVS
 
@@ -726,7 +736,7 @@
 
 1997-06-23  Andras Varga
 
-        * commented out XSynchronize(...) and Tk_SetWindowBackground(...) 
+        * commented out XSynchronize(...) and Tk_SetWindowBackground(...)
 	lines from tklib.cc which caused problems on Win95/NT
 
         * added TKENV_LIBPATH environment var to specify the location of
