--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -1,3 +1,8 @@
+2002-04-02  Ulrich Kaage <kaage@int.uni-karlsruhe.de>  <kaage@int.etec.uni-karlsruhe.de>
+
+	* opp_makemake.in (): when parsing option -u: use brackets around
+	tr groups
+
 2002-03-03  Andras Varga
 
 	* opp_makemake: added -L option; removed Makefile.in from the depend
