--- a/samples/dyna2/ChangeLog
+++ b/samples/dyna2/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-03  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
+
+	* README : added note about experimental message subclassing
+
 2001-11-25  Andras Varga
  
 	* created from the Dyna sample simulation
