--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-06  Andras Varga
+
+	* defs.h: version number upped to 2.2
+
 2002-03-05  Andras Varga
 
 	* cgate.h: cGate::setDisplayString() got an optional second parameter,
