--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-06  Andras Varga
+
+	* version number upped to 2.2
+
 2002-04-05  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
 
 	* msgc.pl (generateClass): fixed compiler warnings about
