--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -1,6 +1,8 @@
 2002-04-06  Andras Varga
 
 	* opp_test added (moved here from test/); makefile installs it into bin/
+        * makedep.pl renamed to opp_makedep and made a standalone program;
+        makefile installs it into bin/
 
 2002-04-02  Ulrich Kaage <kaage@int.uni-karlsruhe.de>  <kaage@int.etec.uni-karlsruhe.de>
 
