--- a/samples/fddi/ChangeLog
+++ b/samples/fddi/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-07  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
+
+	* Makefile.in (NEDCFLAGS): fixed substitution
+
 2001-09-01 Andras Varga
 
 	* const-related fixes
