--- a/samples/fifo1/ChangeLog
+++ b/samples/fifo1/ChangeLog
@@ -1,3 +1,6 @@
+2002-04-07  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
+
+	* Makefile.in (NEDCFLAGS): fixed substitution
 
 2001-03-10  Andras Varga
 
