--- a/samples/nim/ChangeLog
+++ b/samples/nim/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-07  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
+
+	* Makefile.in (NEDCFLAGS): fixed substitution
+
 2001-08-06  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
 
 	* players.h (class Player, SimplePlayer, SmartPlayer,
