--- a/test/Readme
+++ b/test/Readme
@@ -1,6 +1,11 @@
 OMNeT++ Regression Test Tool
 ============================
 
+This file documents the opp_test tool. Reading it will help you understand
+.test files in the test/ directory and write new test cases for your simulation
+models or for the simulation kernel.
+
+
 Each test case is a single *.test file. All NED code, C++ code and
 other data necessary to run the test case, and also PASS criteria are
 embedded in the test case file. The advantages for this design are twofold:
