--omnetpp-2.2 released-- line added to ChangeLog by _scripts/tag

--- a/samples/dyna2/ChangeLog
+++ b/samples/dyna2/ChangeLog
@@ -1,3 +1,5 @@
+2002-05-04  ------ omnetpp-2.2 released ------
+
 2002-04-03  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
 
 	* README : added note about experimental message subclassing
