--- a/src/plove-old/ChangeLog
+++ b/src/plove-old/ChangeLog
@@ -1,3 +1,5 @@
+2002-05-04  ------ omnetpp-2.2 released ------
+
 2001-08-30  Andras Varga
 
 	* cosmetic changes; Plove 2.1p1 win32 binary bugfix release
