--- a/src/cmdenv/ChangeLog
+++ b/src/cmdenv/ChangeLog
@@ -1,3 +1,5 @@
+2002-05-04  ------ omnetpp-2.2 released ------
+
 2002-01-13  Andras Varga
 
 	* Graceful handling of SIGTERM and SIGINT signals: calls finish()
