--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -1,3 +1,5 @@
+2002-05-04  ------ omnetpp-2.2 released ------
+
 2002-03-11  Uli Kaage  <kaage@int.uni-karlsruhe.de>
 
 	* filemgrs.cc (initVector): make sure that vp->name is not
