--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -1,3 +1,5 @@
+2002-05-04  ------ omnetpp-2.2 released ------
+
 2002-02-24  Andras Varga
 
 	* opp_test.pl: To make it easier to create new test cases from
