--- a/samples/pvmex/ChangeLog
+++ b/samples/pvmex/ChangeLog
@@ -1,3 +1,8 @@
+2002-05-28  Frank Paehlke  <paehlke@tm.uni-karlsruhe.de>
+
+	* simples.cc: use standard headers and namespaces if 
+	USE_STD_NAMESPACES is defined
+
 2002-05-04  ------ omnetpp-2.2 released ------
 
 2002-04-07  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
