--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,9 @@
+2002-05-27  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
+
+	* main.tcl (create_omnetpp_window): increased event number status
+	bar field width by 3 digits - it was limited in size to 1.000.000
+	events.
+
 2002-05-04  ------ omnetpp-2.2 released ------
 
 2002-03-14  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
