--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -1,3 +1,21 @@
+2002-06-11  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
+
+	* opp_makemake.in (doxyconf): new variable; names the doxygen
+	configuration file
+	(nedfiles): new variable, holds all ned files including those in
+	sub-directories
+	(neddoc.html): new Makefile target for NED documentation
+	generation. Creates neddoc.html
+	(htmldoc): new Makefile target for C++ code documentation
+	generation. Docu is placed into ./html sub-directory
+	(doc): new Makefile target that calls target neddoc.html and
+	htmldoc
+	(): various code for NED file collection; exludes NED files that
+	contain experimental subclassing ("//--subclassing--")
+
+	* opp_neddoc.in: use OMNETPP_UTILS_DIR as path to
+	neddoc.xsl. Added signal traps and a cleanup() function
+
 2002-06-10  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
 
 	* Makefile.in (all): copy opp_neddoc to bin dir.
