make PDF bookmarks numbered

--- a/doc/src/manual/usman.tex
+++ b/doc/src/manual/usman.tex
@@ -27,7 +27,7 @@
 %% PDF-Info
 \ifpdf
   \usepackage[pdftex]{graphicx}
-  \usepackage[plainpages=false,linktocpage,pdftex]{hyperref}   %% automatic hyperlinking
+  \usepackage[plainpages=false,linktocpage,bookmarksnumbered=true,pdftex]{hyperref}   %% automatic hyperlinking
   \pdfcompresslevel=9
   \pdfinfo{/Author (Andras Varga)
     /Title (OMNeT++ User Manual)
