--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-11  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
+
+	* doxy.cfg (GENERATE_TAGFILE): generate ../doc/api/tags. This
+	tag file can be included when generating model documentation
+
 2002-05-28  Frank Paehlke  <paehlke@tm.uni-karlsruhe.de>
 
 	* defs.h: added macro USE_STD_NAMESPACES for C++ compilers with
