--- a/doc/usman/ChangeLog
+++ b/doc/usman/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-12  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
+
+	* ch-build-sim-progs.tex (subsection{Producing a Makefile with the
+	opp(:_(Bmakemake script}): turned paragraph about available make
+	targets into a table
+
 2002-06-11  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
 
 	* Makefile (default usman.dvi usman.pdf clean): new targets
