--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-27  Andras Varga
+
+	* cexception.h added; methods that formerly called opp_error() now
+	throw exception: throw new cException(...).
+
 2002-06-17  Andras Varga
 
 	* cpar.cc: new feature: cPar can use compiled expressions subclassed 
